--- a/getir/ViewControllers/Deals/DealsViewController.xib
+++ b/getir/ViewControllers/Deals/DealsViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DealsViewController" customModule="getir" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="OY7-DV-XVm" id="CMg-lJ-Az9"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
